{
  "version": 4,
  "terraform_version": "0.13.3",
  "serial": 265,
  "lineage": "95183392-a461-0975-68cb-8ed79f27ab96",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_alb",
      "name": "ecs-load-balancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:583843337741:loadbalancer/app/ecs-load-balancer/62b6a039e2a1b577",
            "arn_suffix": "app/ecs-load-balancer/62b6a039e2a1b577",
            "dns_name": "ecs-load-balancer-42592867.ap-south-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:ap-south-1:583843337741:loadbalancer/app/ecs-load-balancer/62b6a039e2a1b577",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "ecs-load-balancer",
            "security_groups": [
              "sg-0a75d0b9a31a70992"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0e422a3126be903c8"
              },
              {
                "subnet_id": "subnet-0f0cc2a1c95718a98"
              }
            ],
            "subnets": [
              "subnet-0e422a3126be903c8",
              "subnet-0f0cc2a1c95718a98"
            ],
            "tags": {
              "Name": "ecs-load-balancer"
            },
            "vpc_id": "vpc-0fdc7429c23af9e22",
            "zone_id": "ZP97RAFLXTNZK"
          },
          "dependencies": [
            "aws_security_group.test_public_sg",
            "aws_subnet.test_public_sn_01",
            "aws_subnet.test_public_sn_02",
            "aws_vpc.test_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "alb-listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:583843337741:listener/app/ecs-load-balancer/62b6a039e2a1b577/324119f52c2fad95",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:583843337741:targetgroup/ecs-target-group/7fe865c815d54291",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:583843337741:listener/app/ecs-load-balancer/62b6a039e2a1b577/324119f52c2fad95",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-south-1:583843337741:loadbalancer/app/ecs-load-balancer/62b6a039e2a1b577",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "dependencies": [
            "aws_alb.ecs-load-balancer",
            "aws_alb_target_group.ecs-target-group",
            "aws_security_group.test_public_sg",
            "aws_subnet.test_public_sn_01",
            "aws_subnet.test_public_sn_02",
            "aws_vpc.test_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "ecs-target-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:583843337741:targetgroup/ecs-target-group/7fe865c815d54291",
            "arn_suffix": "targetgroup/ecs-target-group/7fe865c815d54291",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:583843337741:targetgroup/ecs-target-group/7fe865c815d54291",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "ecs-target-group",
            "port": 80,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "ecs-target-group"
            },
            "target_type": "instance",
            "vpc_id": "vpc-0fdc7429c23af9e22"
          },
          "dependencies": [
            "aws_alb.ecs-load-balancer",
            "aws_security_group.test_public_sg",
            "aws_subnet.test_public_sn_01",
            "aws_subnet.test_public_sn_02",
            "aws_vpc.test_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "test_ig",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:583843337741:internet-gateway/igw-0503351c3e6d48a4e",
            "id": "igw-0503351c3e6d48a4e",
            "owner_id": "583843337741",
            "tags": {
              "Name": "test_ig"
            },
            "vpc_id": "vpc-0fdc7429c23af9e22"
          },
          "dependencies": [
            "aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "test_public_sn_rt_01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0b841e0b24c261731",
            "owner_id": "583843337741",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0503351c3e6d48a4e",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "test_public_sn_rt_01"
            },
            "vpc_id": "vpc-0fdc7429c23af9e22"
          },
          "dependencies": [
            "aws_internet_gateway.test_ig",
            "aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "test_public_sn_rt_02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0c9f1d3bb98180f30",
            "owner_id": "583843337741",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0503351c3e6d48a4e",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "test_public_sn_rt_02"
            },
            "vpc_id": "vpc-0fdc7429c23af9e22"
          },
          "dependencies": [
            "aws_internet_gateway.test_ig",
            "aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "test_public_sn_rt_01_assn",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-082452f6b79bac792",
            "route_table_id": "rtb-0b841e0b24c261731",
            "subnet_id": "subnet-0f0cc2a1c95718a98"
          },
          "dependencies": [
            "aws_internet_gateway.test_ig",
            "aws_route_table.test_public_sn_rt_01",
            "aws_subnet.test_public_sn_01",
            "aws_vpc.test_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "test_public_sn_rt_assn_02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-046ef9ec0a8316fc2",
            "route_table_id": "rtb-0c9f1d3bb98180f30",
            "subnet_id": "subnet-0e422a3126be903c8"
          },
          "dependencies": [
            "aws_internet_gateway.test_ig",
            "aws_route_table.test_public_sn_rt_02",
            "aws_subnet.test_public_sn_02",
            "aws_vpc.test_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "test_public_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:583843337741:security-group/sg-0a75d0b9a31a70992",
            "description": "Test public access security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a75d0b9a31a70992",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/24",
                  "10.0.1.0/24"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "test_public_sg",
            "name_prefix": "",
            "owner_id": "583843337741",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "test_public_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fdc7429c23af9e22"
          },
          "dependencies": [
            "aws_vpc.test_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "test_public_sn_01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:583843337741:subnet/subnet-0f0cc2a1c95718a98",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.0.0/24",
            "id": "subnet-0f0cc2a1c95718a98",
            "map_public_ip_on_launch": false,
            "owner_id": "583843337741",
            "tags": {
              "Name": "test_public_sn_01"
            },
            "vpc_id": "vpc-0fdc7429c23af9e22"
          },
          "dependencies": [
            "aws_vpc.test_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "test_public_sn_02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:583843337741:subnet/subnet-0e422a3126be903c8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0e422a3126be903c8",
            "map_public_ip_on_launch": false,
            "owner_id": "583843337741",
            "tags": {
              "Name": "test_public_sn_02"
            },
            "vpc_id": "vpc-0fdc7429c23af9e22"
          },
          "dependencies": [
            "aws_vpc.test_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "test_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:583843337741:vpc/vpc-0fdc7429c23af9e22",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0707f9c32caac04fe",
            "default_route_table_id": "rtb-0665539ccbae438de",
            "default_security_group_id": "sg-0247cbc05027f27ba",
            "dhcp_options_id": "dopt-0e24d365",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0fdc7429c23af9e22",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0665539ccbae438de",
            "owner_id": "583843337741",
            "tags": {
              "Name": "my_vpc"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}